<resources>

    <!-- activity_Welcome strings -->
    <string name="welcome">"Welcome!"</string>
    <string name="food_quote">"First we eat, then we do everything else" -M.F.K. Fisher</string>

    <!-- activity_Calendar strings -->
    <string name="Calendar">Calendar</string>
    <string name="app_name">ZoomFoods</string>
    <string name="primary_color">Primary color</string>
    <string name="primary_color_variant">Primary color var</string>
    <string name="secondary_color">Secondary color</string>
    <string name="secondary_color_variant">Secondary color var</string>
    <string name="tertiary_color">Tertiary color</string>
    <string name="tertiary_color_variant">Tertiary color var</string>
    <string name="button">Button</string>
    <string name="email_icon">email icon</string>
    <string name="background">Background</string>
    <string name="surface">Surface</string>
    <string name="Error">Error</string>
    <string name="OnPrimary">On Primary</string>
    <string name="OnSecondary">On Secondary</string>
    <string name="OnTertiary">On Tertiary</string>
    <string name="OnBackground">On Background</string>
    <string name="OnSurface">On Surface</string>
    <string name="OnError">On Error</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_back">Welcome Back</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="Zoom_Foods">Zoom Foods</string>
    <string name="menu_label_Learn_More">Learn More</string>
    <string name="menu_label_About_Us">About Us</string>
    <string name="menu_label_Contact_Us">Contact Us</string>
    <!-- General/Shared strings -->
    <string name="login">Log in</string>
    <string name="keep_me_signed_in">Keep Me Signed In</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_started">Get started</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>

    <!-- Strings related to Dashboard -->
    <string name="dashboard">Dashboard</string>

    <!-- Strings related to Profile -->
    <string name="customerName">Customer Name</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="socialMediaAccount">Social Media</string>
    <string name="changePassword">Change Password</string>
    <string name="confirmChanges">Confirm Changes</string>

    <!-- Strings related to Water Intake -->
    <string name="Drink_header">Today I still need to drink 23 oz</string>
    <string name="intake">INTAKE</string>
    <string name="target">TARGET</string>
    <string name="record">Today\'s record</string>
    <string name="quick_add">Quick add</string>
    <string name="amount">Amount:</string>
    <string name="drink_type">Type of Drink:</string>
    <string name="Tea">Tea</string>
    <string name="Coffee">Coffee</string>
    <string name="Milk">Milk</string>
    <string name="Juice">Juice</string>
    <string name="Soda">Soda</string>
    <string name="Beer">Beer</string>





</resources>