<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/egg_stack"
    android:backgroundTint="#60FFFFFF"
    android:backgroundTintMode="src_atop"
    tools:context=".Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="22dp">

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:layout_marginTop="-110sp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="50sp" />
    <TextView
        android:id="@+id/get_Started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vollkorn_semibold"
        android:gravity="top"
        android:text="@string/get_started"
        android:textColor="@color/shadeDeepGreyBlue"
        android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:ems="10"
            android:layout_marginTop="30sp"
            app:backgroundTint="@null"
            android:background="@drawable/textfield_shape"
            android:inputType="textEmailAddress"
            android:text="@string/email_address"
            android:textColor="@color/shadeGreyBlue"
            android:textSize="12sp"
            android:fontFamily="@font/amaranth"
            android:gravity="top"
            android:paddingLeft="5sp"
            android:paddingTop="3sp"
            tools:ignore="TouchTargetSizeCheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/Sign_up_Password"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="15sp"
            android:ems="10"
            app:backgroundTint="@null"
            android:background="@drawable/textfield_shape"
            android:hint="@string/prompt_password"
            android:textColorHint="@color/shadeGreyBlue"
            android:textSize="12sp"
            android:fontFamily="@font/amaranth"
            android:gravity="top"
            android:paddingLeft="5sp"
            android:paddingTop="3sp"
            tools:ignore="TouchTargetSizeCheck"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="15sp"
            android:ems="10"
            app:backgroundTint="@null"
            android:background="@drawable/textfield_shape"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/shadeGreyBlue"
            android:textSize="12sp"
            android:fontFamily="@font/amaranth"
            android:gravity="top"
            android:paddingLeft="5sp"
            android:paddingTop="3sp"
            tools:ignore="TouchTargetSizeCheck"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:text="@string/sign_up"
            android:background="@drawable/btn_shape3"
            android:fontFamily="@font/amaranth"
            android:textSize="15sp"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>